@@ -2277,3 +2277,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
  8.New INI entries: OBJSPERTHREAD, TICKTIME, MILLISPERMUDHOUR -- control time and thread spawning!
  9.Web & SMTP server INI files have some tweeking options for performance (MAXTHREADS/REQUESTTIMEOUTMINS)
 10.New Scriptable Command: MPPOSSESS
+11.MERGE command can now be used to merge different database instances of areas/rooms/etc..
